// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic usage: info__result 1`] = `
Object {
  "content": "筑波大生に最適な設計になっており、いかに時間割を簡単に作るかに重きを置いています。
わずか数ステップで時間割を作成・管理することができます。


現在もOSSとして保守・アップデートが行われているため、新たな機能を提案していただくことも可能です。

## Twinsから安全に時間割を自動登録

Twin:teではTwinsの時間割データを用いて簡単に時間割を作成することができます。
 また昨今の危険性が指摘されている時間割アプリのように、学籍番号やパスワードといった情報をサーバー側で取得することはございません。
（どのような動作原理なのかは [開発者ブログ](https://twinte.hatenablog.com/)をご参照ください。また全てのソースコードを[Github](https://github.com/twin-te) にて公開しています。）",
  "date": "2020-06-14 20:00:00",
  "id": "eab4dbd6-7e52-45a5-8c92-23b9bdde9226",
  "tag": "info",
  "title": "お知らせ機能を追加しました！",
}
`;

exports[`parse is Endomorphism: info__result__parced 1`] = `
Object {
  "content": "<p>筑波大生に最適な設計になっており、いかに時間割を簡単に作るかに重きを置いています。
わずか数ステップで時間割を作成・管理することができます。</p>
<p>現在もOSSとして保守・アップデートが行われているため、新たな機能を提案していただくことも可能です。</p>
<h2 id=\\"twinsから安全に時間割を自動登録\\">Twinsから安全に時間割を自動登録</h2>
<p>Twin:teではTwinsの時間割データを用いて簡単に時間割を作成することができます。
 また昨今の危険性が指摘されている時間割アプリのように、学籍番号やパスワードといった情報をサーバー側で取得することはございません。
（どのような動作原理なのかは <a href=\\"https://twinte.hatenablog.com/\\">開発者ブログ</a>をご参照ください。また全てのソースコードを<a href=\\"https://github.com/twin-te\\">Github</a> にて公開しています。）</p>
",
  "date": "2020-06-14 20:00:00",
  "id": "eab4dbd6-7e52-45a5-8c92-23b9bdde9226",
  "tag": "info",
  "title": "お知らせ機能を追加しました！",
}
`;
